docs(agent): comprehensive HOW/WHY guide for ByteBuddy instrumentation
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0181KsRMfyxJh3PeBVLHEmhm